# bnb-test-project-plz-ignore

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: issue_report.md
.github/workflows/: build.yml  build_maybe_release.yml  ci.yml  release.yml  test.yml
api/: index.html
docs/: api.md  index.md
newsfragments/: 1.feature
requirements/: dev_requirements.in  dev_requirements.txt  doc_requirements.in  doc_requirements.txt  requirements.txt  test_requirements.in  test_requirements.txt
search/: search_index.json
src/bnb_test_project_plz_ignore/: __init__.py
tests/: test_bnb_test_project_plz_ignore.py
